--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
                     </form>
                 </div>
             </section>
-            <footer class="footer__container">
+            <footer class="footer-container">
         <div class="container footer-container__content">
             <div class="footer">
                 <nav class="menu-footer">
